--- a/FamousFolks/FamousFolks.csproj
+++ b/FamousFolks/FamousFolks.csproj
@@ -52,6 +52,8 @@
     <Reference Include="System" />
     <Reference Include="System.Data" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Runtime.Serialization" />
+    <Reference Include="System.Security" />
     <Reference Include="System.Web.DynamicData" />
     <Reference Include="System.Web.Entity" />
     <Reference Include="System.Web.ApplicationServices" />
@@ -168,12 +170,40 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\ExpertisesController.cs" />
+    <Compile Include="Controllers\FolksController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="FolksContext.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Expertise.cs">
+      <DependentUpon>FamousFolksADO.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\FamousFolksADO.Context.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FamousFolksADO.Context.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\FamousFolksADO.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FamousFolksADO.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\FamousFolksADO.Designer.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>FamousFolksADO.edmx</DependentUpon>
+    </Compile>
+    <Compile Include="Models\FamousFolksContext.cs" />
+    <Compile Include="Models\Folk.cs">
+      <DependentUpon>FamousFolksADO.tt</DependentUpon>
+    </Compile>
+    <Compile Include="Models\FolksExpertise.cs">
+      <DependentUpon>FamousFolksADO.tt</DependentUpon>
+    </Compile>
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
@@ -186,8 +216,25 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="Models\FamousFolksADO.Context.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>FamousFolksADO.edmx</DependentUpon>
+      <LastGenOutput>FamousFolksADO.Context.cs</LastGenOutput>
+    </Content>
+    <Content Include="Models\FamousFolksADO.tt">
+      <Generator>TextTemplatingFileGenerator</Generator>
+      <DependentUpon>FamousFolksADO.edmx</DependentUpon>
+      <LastGenOutput>FamousFolksADO.cs</LastGenOutput>
+    </Content>
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
+    <EntityDeploy Include="Models\FamousFolksADO.edmx">
+      <Generator>EntityModelCodeGenerator</Generator>
+      <LastGenOutput>FamousFolksADO.Designer.cs</LastGenOutput>
+    </EntityDeploy>
+    <Content Include="Models\FamousFolksADO.edmx.diagram">
+      <DependentUpon>FamousFolksADO.edmx</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
@@ -234,6 +281,16 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Expertises\Create.cshtml" />
+    <Content Include="Views\Expertises\Delete.cshtml" />
+    <Content Include="Views\Expertises\Details.cshtml" />
+    <Content Include="Views\Expertises\Edit.cshtml" />
+    <Content Include="Views\Expertises\Index.cshtml" />
+    <Content Include="Views\Folks\Create.cshtml" />
+    <Content Include="Views\Folks\Delete.cshtml" />
+    <Content Include="Views\Folks\Details.cshtml" />
+    <Content Include="Views\Folks\Edit.cshtml" />
+    <Content Include="Views\Folks\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -245,6 +302,9 @@
     <Content Include="packages.config" />
     <None Include="Project_Readme.html" />
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{508349B6-6B84-4DF5-91F0-309BEEBAD82D}" />
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
