--- a/FamousFolks/Web.config
+++ b/FamousFolks/Web.config
@@ -11,6 +11,12 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-FamousFolks-20170212094652.mdf;Initial Catalog=aspnet-FamousFolks-20170212094652;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+    <add name="FamousFolksEntities" connectionString="metadata=res://*/Models.FamousFolksADO.csdl|res://*/Models.FamousFolksADO.ssdl|res://*/Models.FamousFolksADO.msl;provider=System.Data.SqlClient;provider connection string=&quot;data source=MAMANI\SQLEXPRESS;initial catalog=FamousFolks;integrated security=True;MultipleActiveResultSets=True;App=EntityFramework&quot;"
+      providerName="System.Data.EntityClient" />
+    <add name="FamousFolksContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=FamousFolksContext-20170212222124; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|FamousFolksContext-20170212222124.mdf"
+      providerName="System.Data.SqlClient" />
+    <add name="FolksContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=FolksContext-20170212231838; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|FolksContext-20170212231838.mdf"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
