--- a/FamousFolks/FamousFolks.csproj
+++ b/FamousFolks/FamousFolks.csproj
@@ -216,6 +216,7 @@
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
     <Content Include="Content\Site.css" />
+    <Content Include="img\Famous.png" />
     <Content Include="Models\FamousFolksADO.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>FamousFolksADO.edmx</DependentUpon>
