--- a/FamousFolks/FamousFolks.csproj
+++ b/FamousFolks/FamousFolks.csproj
@@ -172,6 +172,7 @@
     <Compile Include="Controllers\AccountController.cs" />
     <Compile Include="Controllers\ExpertisesController.cs" />
     <Compile Include="Controllers\FolksController.cs" />
+    <Compile Include="Controllers\FolksExpertisesController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="FolksContext.cs" />
@@ -213,6 +214,7 @@
   <ItemGroup>
     <Content Include="Content\bootstrap.css" />
     <Content Include="Content\bootstrap.min.css" />
+    <Content Include="Content\MyStyle.css" />
     <Content Include="favicon.ico" />
     <Content Include="fonts\glyphicons-halflings-regular.svg" />
     <Content Include="Global.asax" />
@@ -260,9 +262,6 @@
     <Content Include="Views\_ViewStart.cshtml" />
     <Content Include="Views\Shared\Error.cshtml" />
     <Content Include="Views\Shared\_Layout.cshtml" />
-    <Content Include="Views\Home\About.cshtml" />
-    <Content Include="Views\Home\Contact.cshtml" />
-    <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Account\_ExternalLoginsListPartial.cshtml" />
     <Content Include="Views\Account\ConfirmEmail.cshtml" />
     <Content Include="Views\Account\ExternalLoginConfirmation.cshtml" />
@@ -293,6 +292,14 @@
     <Content Include="Views\Folks\Details.cshtml" />
     <Content Include="Views\Folks\Edit.cshtml" />
     <Content Include="Views\Folks\Index.cshtml" />
+    <Content Include="Views\Home\About.cshtml" />
+    <Content Include="Views\Home\Contact.cshtml" />
+    <Content Include="Views\Home\Index.cshtml" />
+    <Content Include="Views\FolksExpertises\Create.cshtml" />
+    <Content Include="Views\FolksExpertises\Delete.cshtml" />
+    <Content Include="Views\FolksExpertises\Details.cshtml" />
+    <Content Include="Views\FolksExpertises\Edit.cshtml" />
+    <Content Include="Views\FolksExpertises\Index.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
