--- a/FamousFolks/Web.config
+++ b/FamousFolks/Web.config
@@ -18,6 +18,8 @@
       providerName="System.Data.SqlClient" />
     <add name="FolksContext" connectionString="Data Source=(localdb)\MSSQLLocalDB; Initial Catalog=FolksContext-20170212231838; Integrated Security=True; MultipleActiveResultSets=True; AttachDbFilename=|DataDirectory|FolksContext-20170212231838.mdf"
       providerName="System.Data.SqlClient" />
+    <add name="FamousFolksConnectionString" connectionString="Data Source=MAMANI\SQLEXPRESS;Initial Catalog=FamousFolks;Integrated Security=True;MultipleActiveResultSets=True;Application Name=EntityFramework"
+      providerName="System.Data.SqlClient" />
   </connectionStrings>
   
   <appSettings>
